moved scala helpers into support folder and renamed various references across views

--- a/frontend/app/views/event/list.scala.html
+++ b/frontend/app/views/event/list.scala.html
@@ -1,5 +1,5 @@
 @(eventsList: Seq[model.Eventbrite.EBEvent])(implicit request: play.api.mvc.Request[_])
-@import views.Crumb
+@import views.support.Crumb
 
 @main() {
 
