--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -1,6 +1,6 @@
 @(event: model.Eventbrite.EBEvent)(implicit request: play.api.mvc.Request[_])
-@import views.Crumb
-@import views.Dates._
+@import views.support.Crumb
+@import views.support.Dates._
 @import org.joda.time.Instant
 @import model.Eventbrite._
 @import model.Eventbrite.EBEventStatus._
