--- a/frontend/app/views/joiner/payment/paymentForm.scala.html
+++ b/frontend/app/views/joiner/payment/paymentForm.scala.html
@@ -1,7 +1,7 @@
 @(tier: model.Tier.Tier, amount: Int)(implicit request: play.api.mvc.Request[_])
 
-@import views.html.joiner.payment.selectDates
-@import views.Format._
+@import views.support.selectDates
+@import views.support.Format._
 
 @main() {
 
