--- a/frontend/app/views/partials/crumb.scala.html
+++ b/frontend/app/views/partials/crumb.scala.html
@@ -1,5 +1,5 @@
-@(crumbs: Seq[views.Crumb])
-@import views.Crumb
+@(crumbs: Seq[views.support.Crumb])
+@import views.support.Crumb
 
 <div class="breadcrumb">
 
