--- a/frontend/app/views/partials/joiner/payment/aside.scala.html
+++ b/frontend/app/views/partials/joiner/payment/aside.scala.html
@@ -1,7 +1,7 @@
 @(tier: model.Tier.Tier, amount: Int)
 
-@import views.Dates._
-@import views.Format._
+@import views.support.Dates._
+@import views.support.Format._
 
 <aside class="form-secondary-container">
     <ul class="form-detail u-unstyled">
