--- a/frontend/app/views/partials/tier/summary.scala.html
+++ b/frontend/app/views/partials/tier/summary.scala.html
@@ -1,7 +1,7 @@
 @(subscription: model.Stripe.Subscription, card: model.Stripe.Card)
 
-@import views.Dates._
-@import views.Format._
+@import views.support.Dates._
+@import views.support.Format._
 
 <table class="table table--responsive-font table--striped">
     <tr class="table__headline" role="row">
