--- a/frontend/app/views/tier/cancel/summary.scala.html
+++ b/frontend/app/views/tier/cancel/summary.scala.html
@@ -1,7 +1,7 @@
 @(subscription: model.Stripe.Subscription, card: model.Stripe.Card)(implicit request: play.api.mvc.Request[_])
 
 @import configuration.Config
-@import views.Dates._
+@import views.support.Dates._
 
 @main(Some("Down Grade Tier Summary")) {
 
