--- a/frontend/app/views/joiner/thankyou/partner.scala.html
+++ b/frontend/app/views/joiner/thankyou/partner.scala.html
@@ -1,7 +1,7 @@
 @(subscription: model.Stripe.Subscription, card: model.Stripe.Card)(implicit request: play.api.mvc.Request[_])
 
-@import views.Crumb
-@import views.Dates._
+@import views.support.Crumb
+@import views.support.Dates._
 
 @main() {
 
