--- a/frontend/app/views/joiner/thankyou/patron.scala.html
+++ b/frontend/app/views/joiner/thankyou/patron.scala.html
@@ -1,6 +1,6 @@
 @(subscription: model.Stripe.Subscription, card: model.Stripe.Card)(implicit request: play.api.mvc.Request[_])
 
-@import views.Crumb
+@import views.support.Crumb
 
 @main() {
 
