--- a/frontend/app/views/partials/event/item.scala.html
+++ b/frontend/app/views/partials/event/item.scala.html
@@ -1,5 +1,5 @@
 @(event: model.Eventbrite.EBEvent)
-@import views.Dates._
+@import views.support.Dates._
 @import model.Eventbrite.EBEventStatus._
 
 <li class="events-list__item facia-slice__item">
