--- a/frontend/app/views/partials/joiner/thankyou/paymentSummary.scala.html
+++ b/frontend/app/views/partials/joiner/thankyou/paymentSummary.scala.html
@@ -1,7 +1,7 @@
 @(subscription: model.Stripe.Subscription, card: model.Stripe.Card )
 
-@import views.Dates._
-@import views.Format._
+@import views.support.Dates._
+@import views.support.Format._
 
 <section class="joiner-section joiner-section--no-border">
     <table class="table table--responsive-font table--striped">
