--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -5,7 +5,7 @@
 
 @main() {
 
-    @partials.crumb(Seq(Crumb("Home", "/")))
+    @fragments.crumb(Seq(Crumb("Home", "/")))
 
     <div class="page-container">
         <h1 class="section-header">@if(Config.membershipHide){Masterclasses}else{Membership}</h1>
