--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -54,11 +54,11 @@
     </head>
     <body>
 
-        @partials.header()
+        @fragments.header()
 
         @content
 
-        @partials.footer()
+        @fragments.footer()
 
     </body>
 </html>
