--- a/frontend/app/views/joiner/thankyou/patron.scala.html
+++ b/frontend/app/views/joiner/thankyou/patron.scala.html
@@ -12,7 +12,7 @@
         </p>
     </section>
 
-    @partials.joiner.thankyou.paymentSummary(subscription, card)
+    @fragments.joiner.thankyou.paymentSummary(subscription, card)
 
     <section class="align-center">
         <a class="action action--inline-text action--join action--wide" href="/events">Get Started</a>
