--- a/frontend/app/views/joiner/tierList.scala.html
+++ b/frontend/app/views/joiner/tierList.scala.html
@@ -4,7 +4,7 @@
 
 @main() {
 
-@partials.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/become-a-member")))
+@fragments.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/become-a-member")))
 
 <div class="page-container">
 
