--- a/frontend/app/views/tier/downgrade/summary.scala.html
+++ b/frontend/app/views/tier/downgrade/summary.scala.html
@@ -22,7 +22,7 @@
                     <h2>Current Package Summary</h2>
                 </div>
                 <div class="l-row__item l-row__item--boost-2 secondary-content">
-                    @partials.tier.summary(subscription, card)
+                    @fragments.tier.summary(subscription, card)
                 </div>
             </section>
         </div>
