--- a/frontend/app/views/joiner/payment/paymentForm.scala.html
+++ b/frontend/app/views/joiner/payment/paymentForm.scala.html
@@ -2,8 +2,9 @@
 
 @import views.support.selectDates
 @import views.support.Format._
+@import configuration.Config
 
-@main() {
+@main(Config.joinerPaymentPageTitle) {
 
 <div class="page-container">
     <h1 class="section-headline">Payment</h1>
