--- a/frontend/app/views/joiner/thankyou/partner.scala.html
+++ b/frontend/app/views/joiner/thankyou/partner.scala.html
@@ -2,8 +2,9 @@
 
 @import views.support.Crumb
 @import views.support.Dates._
+@import configuration.Config
 
-@main() {
+@main(Config.joinerThankyouPageTitle) {
 
 <div class="page-container">
 
