--- a/frontend/app/views/joiner/tier/patron.scala.html
+++ b/frontend/app/views/joiner/tier/patron.scala.html
@@ -1,8 +1,9 @@
 @()(implicit request: play.api.mvc.Request[_])
 
 @import views.support.Crumb
+@import configuration.Config
 
-@main() {
+@main(Config.joinerThankyouPageTitle) {
 
 @fragments.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/join"), Crumb("Become a Patron", "/join/patron")))
 
