--- a/frontend/app/views/tier/cancel/summary.scala.html
+++ b/frontend/app/views/tier/cancel/summary.scala.html
@@ -3,7 +3,7 @@
 @import configuration.Config
 @import views.support.Dates._
 
-@main(Some("Down Grade Tier Summary")) {
+@main(Config.tierCancelSummaryPageTitle) {
 
 <div class="page-container">
     <main role="main">
