--- a/frontend/app/views/tier/change.scala.html
+++ b/frontend/app/views/tier/change.scala.html
@@ -7,7 +7,7 @@
     <div class="package__current-indicator">Your Current Package</div>
 }
 
-@main(Some("Change Tier")) {
+@main(Config.tierChangePageTitle) {
 
 <div class="page-container">
     <main role="main">
