--- a/frontend/app/views/event/list.scala.html
+++ b/frontend/app/views/event/list.scala.html
@@ -1,7 +1,8 @@
 @(eventsList: Seq[model.Eventbrite.EBEvent])(implicit request: play.api.mvc.Request[_])
 @import views.support.Crumb
+@import configuration.Config
 
-@main() {
+@main(Config.eventListPageTitle) {
 
 @fragments.crumb(Seq(Crumb("Home", "/"), Crumb("Events", "/events")))
 
