--- a/frontend/app/views/joiner/thankyou/friend.scala.html
+++ b/frontend/app/views/joiner/thankyou/friend.scala.html
@@ -1,8 +1,9 @@
 @()(implicit request: play.api.mvc.Request[_])
 
 @import views.support.Crumb
+@import configuration.Config
 
-@main() {
+@main(Config.joinerThankyouPageTitle) {
 
 <div class="page-container">
 
