--- a/frontend/app/views/joiner/tierList.scala.html
+++ b/frontend/app/views/joiner/tierList.scala.html
@@ -1,8 +1,9 @@
 @()(implicit request: play.api.mvc.Request[_])
 
 @import views.support.Crumb
+@import configuration.Config
 
-@main() {
+@main(Config.joinerPageTitle) {
 
 @fragments.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/become-a-member")))
 
