updates to view templates

--- a/frontend/app/views/joiner/payment/paymentForm.scala.html
+++ b/frontend/app/views/joiner/payment/paymentForm.scala.html
@@ -4,7 +4,7 @@
 @import views.support.Format._
 @import configuration.Config
 
-@main(Config.joinerPaymentPageTitle) {
+@main(Config.joinerPaymentPageTitle + " | " + tier) {
 
 <div class="page-container">
     <h1 class="section-headline">Payment</h1>
