--- a/frontend/app/views/joiner/thankyou/friend.scala.html
+++ b/frontend/app/views/joiner/thankyou/friend.scala.html
@@ -3,7 +3,7 @@
 @import views.support.Crumb
 @import configuration.Config
 
-@main(Config.joinerThankyouPageTitle) {
+@main(Config.joinerThankyouPageTitle + " | Friend") {
 
 <div class="page-container">
 
