--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -26,7 +26,7 @@
     }
 }
 
-@main(Config.eventDetailPageTitle) {
+@main(Config.eventDetailPageTitle + " | " + event.name.text) {
 
     @fragments.crumb(Seq(Crumb("Home", "/"), Crumb("Events", "/events"), Crumb(event.name.text, s"/event/${event.id}")))
 
