--- a/frontend/app/views/joiner/tier/friend.scala.html
+++ b/frontend/app/views/joiner/tier/friend.scala.html
@@ -3,7 +3,7 @@
 @import views.support.Crumb
 @import configuration.Config
 
-@main(Config.joinerThankyouPageTitle) {
+@main(Config.joinerPageTitle  + " | Friend") {
 
 @fragments.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/join"), Crumb("Become a Friend", "/join/friend")))
 
