--- a/frontend/app/views/joiner/tier/patron.scala.html
+++ b/frontend/app/views/joiner/tier/patron.scala.html
@@ -3,7 +3,7 @@
 @import views.support.Crumb
 @import configuration.Config
 
-@main(Config.joinerThankyouPageTitle) {
+@main(Config.joinerPageTitle + " | Patron") {
 
 @fragments.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/join"), Crumb("Become a Patron", "/join/patron")))
 
