--- a/frontend/app/views/joiner/payment/paymentForm.scala.html
+++ b/frontend/app/views/joiner/payment/paymentForm.scala.html
@@ -2,9 +2,8 @@
 
 @import views.support.selectDates
 @import views.support.Format._
-@import configuration.Config
 
-@main(Config.joinerPaymentPageTitle + " | " + tier) {
+@main("Payment | " + tier) {
 
 <div class="page-container">
     <h1 class="section-headline">Payment</h1>
