--- a/frontend/app/views/joiner/thankyou/partner.scala.html
+++ b/frontend/app/views/joiner/thankyou/partner.scala.html
@@ -2,9 +2,8 @@
 
 @import views.support.Crumb
 @import views.support.Dates._
-@import configuration.Config
 
-@main(Config.joinerThankyouPageTitle + " | " + subscription.plan.name) {
+@main("Thankyou | " + subscription.plan.name) {
 
 <div class="page-container">
 
