--- a/frontend/app/views/tier/cancel/confirm.scala.html
+++ b/frontend/app/views/tier/cancel/confirm.scala.html
@@ -1,8 +1,6 @@
 @()(implicit request: play.api.mvc.Request[_])
 
-@import configuration.Config
-
-@main(Config.tierCancelConfirmPageTitle) {
+@main("Cancel Tier") {
 
 <div class="page-container">
     <main role="main">
