--- a/frontend/app/views/tier/downgrade/confirm.scala.html
+++ b/frontend/app/views/tier/downgrade/confirm.scala.html
@@ -1,8 +1,6 @@
 @()(implicit request: play.api.mvc.Request[_])
 
-@import configuration.Config
-
-@main(Config.tierDowngradeConfirmPageTitle) {
+@main("Downgrade Tier") {
 
 <div class="page-container">
     <main role="main">
