--- a/frontend/app/views/tier/downgrade/summary.scala.html
+++ b/frontend/app/views/tier/downgrade/summary.scala.html
@@ -3,7 +3,7 @@
 @import configuration.Config
 @import views.support.Dates._
 
-@main(Config.tierDowngradeSummaryPageTitle) {
+@main("Downgrade Tier Summary") {
 
 <div class="page-container">
     <main role="main">
