--- a/frontend/app/views/event/list.scala.html
+++ b/frontend/app/views/event/list.scala.html
@@ -1,8 +1,7 @@
 @(eventsList: Seq[model.Eventbrite.EBEvent])(implicit request: play.api.mvc.Request[_])
 @import views.support.Crumb
-@import configuration.Config
 
-@main(Config.eventListPageTitle) {
+@main("Events") {
 
 @fragments.crumb(Seq(Crumb("Home", "/"), Crumb("Events", "/events")))
 
