--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -4,7 +4,6 @@
 @import org.joda.time.Instant
 @import model.Eventbrite._
 @import model.Eventbrite.EBEventStatus._
-@import configuration.Config
 
 @renderButtonGrey = {
     @event.getStatus match {
@@ -26,7 +25,7 @@
     }
 }
 
-@main(Config.eventDetailPageTitle + " | " + event.name.text) {
+@main("Event Detail | " + event.name.text) {
 
     @fragments.crumb(Seq(Crumb("Home", "/"), Crumb("Events", "/events"), Crumb(event.name.text, s"/event/${event.id}")))
 
