format price for members and non-members

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -61,13 +61,19 @@
                     <div class="event__tickets">
 
                         <div class="event__price">
-                            <span class="event__price-amount js-event-price">@event.ticket_classes.getOrElse(Seq(EBTickets(None, None, None, None, None, None, None, None))).head.cost.getOrElse(EBPricing("GBP", "Free", 0)).display</span>
+                            <span class="event__price-amount js-event-price">@event.getFormattedPrice</span>
                             <span class="event__price-note js-event-price-note"> per ticket</span>
                         </div>
+                        <div class="event__trail">
+                            <span class="event__trail-tag js-event-price-tag">Partners/Patrons </span>
+                            <span class="event__trail-upsell js-event-price-discount">@event.getDiscountPrice</span>
+                            <span class="event__trail-saving js-event-price-saving"> (save @event.getSavingPrice)</span>
+                        </div>
+
                         @renderButtonGrey
 
                         <div class="event__sale-ends">
-                            <span class="event__sale_ends_note js-datetime-enhance-note">Sale @if(event.getStatus == Completed){ended on}else{ends on} </span>
+                            <span class="event__sale_ends_note js-datetime-enhance-note">Sales @if(event.getStatus == Completed){ended on}else{end on} </span>
                             <time class="event__sale_ends_time js-datetime-enhance-time" datetime="@event.ticketClassesHead.head.sales_end.getOrElse("")">@event.ticketClassesHead.flatMap(_.sales_end).fold("")(_.pretty)</time>
                         </div>
                     </div>
