--- a/frontend/common/app/assets/stylesheets/pages/_joiner.scss
+++ b/frontend/common/app/assets/stylesheets/pages/_joiner.scss
@@ -98,9 +98,9 @@ $large-card: 35px;
     margin-top: $gutter/2;
 }
 
-.fieldset {
-    border: none;
-}
+//.fieldset {
+//    border: none;
+//}
 
 .form-terms {
     @include fs-bodyCopy(1);
