--- a/frontend/app/views/fragments/header.scala.html
+++ b/frontend/app/views/fragments/header.scala.html
@@ -2,18 +2,130 @@
 
 @import configuration.Config
 
-<header>
-    @if(Config.membershipHide){
-        <a class="header__logo masterclasses" href="/"><img src="@routes.Assets.at("images/masterclasses_mobile.jpg")" alt="" /></a>
-    }else{
-        <a class="header__logo" href="/"><img src="@routes.Assets.at("images/membership_mobile.png")" alt="" /></a>
-    }
-
-    <div class="header__identity">
-        <span class="i-action"><span class="i-profile"></span></span>
-        <span class="identity__notice"><a href="@Config.idWebAppSigninUrl(request.uri)">Sign in</a></span>
-        <span class="identity__avatar u-h"></span>
-        <span class="identity__account u-h"></span>
-        <span class="identity__tier u-h"></span>
+<header class="header" role="banner">
+    <div class="header__inner">
+        <div class="u-cf">
+            <div class="header__primary">
+                <nav>
+                    <ul class="inline-list u-cf" role="menubar">
+                        <li class="menu-item mobile-only">
+                            <a href="#" role="menuitem" class="control js-menu-icon">
+                                <span class="control__icon">
+                                    <i class="i i-menu"></i>
+                                </span>
+                            </a>
+                        </li>
+                        <li class="menu-item menu-item--large hidden-mobile is-hidden js-header-join-us-cta">
+                            <a href="/join" role="menuitem" class="menu-cta no-underline">Join us</a>
+                        </li>
+                        <li class="menu-item menu-item--last">
+                            <a href="@Config.idWebAppSigninUrl(request.uri)" role="menuitem" class="no-underline icon-wrapper js-identity-icon">
+                                <span class="control">
+                                    <span class="control__icon">
+                                        <i class="i i-user"></i>
+                                    </span>
+                                </span>
+                                <span class="hidden-mobile ">
+                                    <span class="identity__notice control__info">Sign in</span>
+                                    <span class="identity__account control__info u-h"></span>
+                                    <span class="identity__tier control__info u-h"></span>
+                                </span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="header__secondary">
+                <span itemscope itemtype="http://schema.org/Organization">
+                    <a href="/" itemprop="url" class="icon-wrapper">
+                        <span class="u-h" itemprop="name">@Config.siteTitle</span>
+                        @if(Config.membershipHide){
+                            <i class="i i-logo i-logo--masterclass"></i>
+                        }else{
+                            <i class="i i-logo"></i>
+                        }
+                    </a>
+                </span>
+            </div>
+        </div>
+        <nav role="navigation" class="nav nav--global">
+            <div class="header__primary">
+                <ul class="inline-list">
+                    <li class="inline-list__item nav__item">
+                        <a href="/events" class="nav__link">events</a>
+                    </li>
+                    <li class="inline-list__item nav__item">
+                        <a href="/join" class="nav__link">become a member</a>
+                    </li>
+                    <li class="inline-list__item nav__item">
+                        <a href="/join/patron" class="nav__link">become a patron</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="header__secondary">
+                <ul class="inline-list">
+                    <li class="inline-list__item nav__item">
+                        <a href="/help" class="nav__link">help</a>
+                    </li>
+                    <li class="inline-list__item nav__item">
+                        <a href="/feedback" class="nav__link nav__link--last">feedback</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+    <div class="nav-popup nav-popup--profile nav-popup--small is-hidden js-profile-nav-popup">
+        <nav role="navigation" aria-label="Profile menu">
+            <ul class="nav nav--columns">
+                <li class="nav__item">
+                    <a href="@Config.idWebAppUrl/user/id/" class="nav__link js-comment-activity">Comment activity</a>
+                </li>
+                <li class="nav__item">
+                    <a href="@Config.idWebAppUrl/public/edit" class="nav__link">Edit profile</a>
+                </li>
+                <li class="nav__item">
+                    <a href="@Config.idWebAppUrl/email-prefs" class="nav__link">Email preferences</a>
+                </li>
+                <li class="nav__item">
+                    <a href="@Config.idWebAppUrl/password/change" class="nav__link"
+                       data-link-name="Change password">Change password</a>
+                </li>
+                <li class="nav__item">
+                    <a href="@Config.idWebAppUrl/signout" class="nav__link">Sign out</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+    <div class="nav-popup--sections nav-popup nav-popup--small is-hidden js-sections-nav-popup">
+        <nav role="navigation" aria-label="@Config.siteTitle sections">
+            <div class="nav-popup__cta_container u-cf u-h js-sections-nav-join-us">
+                <a href="/join" class="nav-popup__cta no-underline">Join us</a>
+            </div>
+            <ul class="nav nav--columns nav--top-border-off u-cf js-sections-nav-popup-page-list">
+                <li class="nav__item">
+                    <a href="/events" class="nav__link">
+                        events
+                    </a>
+                </li>
+                <li class="nav__item">
+                    <a href="/join" class="nav__link">
+                        become a member
+                    </a>
+                </li>
+                <li class="nav__item">
+                    <a href="/join/patron" class="nav__link">
+                        become a patron
+                    </a>
+                </li>
+            </ul>
+            <ul class="nav nav--columns nav--services nav--top-border-off u-cf">
+                <li class="nav__item">
+                    <a class="nav__link" href="/help">help</a>
+                </li>
+                <li class="nav__item">
+                    <a class="nav__link" href="/feedback">feedback</a>
+                </li>
+            </ul>
+        </nav>
     </div>
 </header>
