--- a/frontend/common/app/assets/stylesheets/utility/_hidden.scss
+++ b/frontend/common/app/assets/stylesheets/utility/_hidden.scss
@@ -3,3 +3,9 @@
         display: none !important;
     }
 }
+
+.mobile-only {
+    @include mq(tablet){
+        display: none !important;
+    }
+}
