--- a/frontend/common/app/assets/stylesheets/_extends-only.scss
+++ b/frontend/common/app/assets/stylesheets/_extends-only.scss
@@ -1,20 +1,3 @@
-// Base font-sizes
-// Mixin uses arguments: font(family, weight, size, line-height);
-
-// Type extends
-// =============================================================================
-
-// DEPRECATED:
-// Use font-scale mixins instead
-
-// Serif Text
-%type-5 { @include font($serifheadline, normal, 18, 24); }
-%type-7 { @include font($serif, normal, 14, 20); }
-
-// Sans-serif
-%type-10 { @include font($sans-serif, normal, 13, 20); }
-
-
 // Misc
 // =============================================================================
 
@@ -34,15 +17,14 @@
 }
 
 %icon-holder-circle {
-  position: relative;
-  display: block;
+  display: inline-block;
   overflow: hidden;
   width: 30px;
   height: 30px;
-  border: 1px solid $c-neutral1;
+  border: 1px solid #ffffff;
   padding: 0;
+  margin: 0;
   @include border-radius(50%);
-  @include box-sizing(content-box); // Force proper sizing on button elements
   background-color: transparent;
 
   &,
