--- a/frontend/common/app/assets/stylesheets/_vars.scss
+++ b/frontend/common/app/assets/stylesheets/_vars.scss
@@ -24,7 +24,7 @@ $unitHeight: 36px;
 $inArticleInlineImgWidth: 114px;
 $trailblockImgWidth: 100%;
 $trailblockImgWidthLarge: 140px;
-$headerHeight: 46px;
+$headerHeight: 57px;
 
 
 // Guss defaults overrides
@@ -43,16 +43,6 @@ $guss-column-rule: none;
 // stakeholders, designers, developers, and testers.
 // NB. If these change, please update dfp.js to match
 
-// Article breakpoints
-$a-rightCol-width:    gs-span(4);
-$a-rightCol-trigger:  gs-span(11) + $gs-gutter*2; // 900px
-$a-leftCol-width:     gs-span(2); // Grows to 3 columns on wide viewports
-$a-leftCol-trigger:   gs-span(13) + $gs-gutter*2; // 1060px
-$a-leftColWide-width: gs-span(3); // Grows to 3 columns on wide viewports
-
-// Facia breakpoints
-$facia-leftCol-trigger: gs-span(14) + $gs-gutter*2; // 1140px
-
 $mq-breakpoints: (
         mobile:  gs-span(4)  + $gs-gutter,   // 320px
         tablet:  gs-span(9)  + $gs-gutter*2, // 740px
@@ -61,14 +51,7 @@ $mq-breakpoints: (
 
   // Tweakpoints
         mobileLandscape: gs-span(6) + $gs-gutter, // 480px
-        desktopAd: 810px,
 
-  // Article layout
-        rightCol: $a-rightCol-trigger,
-        leftCol: $a-leftCol-trigger,
-
-  // Facia layout
-        faciaLeftCol: $facia-leftCol-trigger
 );
 
 
@@ -241,4 +224,10 @@ $mem-black: #333333;
 $mem-button-confirm: #1a4683;
 $mem-button-cancel: #b8b8b8;
 
+$mem-header: #0A1932;
 
+$white: #ffffff;
+$offWhite: #d6d6d6;
+$black: #000000;
+$black-trans: rgba(0, 0, 0, .5);
+$white-trans: rgba(255, 255, 255, .5);
