partner flow working

--- a/frontend/app/views/tier/upgrade/payment.scala.html
+++ b/frontend/app/views/tier/upgrade/payment.scala.html
@@ -15,7 +15,7 @@
 
         @* =============== DELIVERY ADDRESS =============== *@
 
-        @fragments.joiner.payment.addressForm("Delivery address", "Where we'll send your welcome pack", "delivery")
+        @fragments.joiner.payment.addressForm("Delivery address", "Where we'll send your welcome pack", "deliveryAddress")
 
         @* =============== CARD DETAILS =============== *@
 
@@ -73,7 +73,7 @@
 
         @* =============== DELIVERY ADDRESS =============== *@
 
-        @fragments.joiner.payment.addressForm("Billing address", "The billing address for your card", "billing")
+        @fragments.joiner.payment.addressForm("Billing address", "The billing address for your card", "billingAddress")
 
         @* =============== PAYMENT OPTION =============== *@
 
