--- a/frontend/app/views/fragments/joiner/payment/addressForm.scala.html
+++ b/frontend/app/views/fragments/joiner/payment/addressForm.scala.html
@@ -13,24 +13,24 @@
 
         <div class="form-field address-fieldset__street">
             <label class="label" for="street">Street
-                <input type="text" name="@(formType)Street" id="street" class="text-input text-input--block" />
+                <input type="text" name="@(formType).street" id="street" class="text-input text-input--block" />
             </label>
         </div>
 
         <div class="form-field address-fieldset__city-post-code">
             <label class="label label--inline label--half" for="city">City
-                <input type="text" name="@(formType)City" id="city" class="text-input text-input--block" />
+                <input type="text" name="@(formType).city" id="city" class="text-input text-input--block" />
             </label>@*
                 == Inline block whitespace ==
             *@<label class="label label--inline label--half" for="postCode">Post code
-                <input type="text" name="@(formType)PostCode" id="postCode" class="text-input text-input--block" />
+                <input type="text" name="@(formType).postCode" id="postCode" class="text-input text-input--block" />
             </label>
         </div>
 
         <div class="form-field address-fieldset__country">
             <label class="label" for="country">Country</label>
             <div class="input">
-                <select name="@(formType)Country" id="country">
+                <select name="@(formType).country" id="country">
                     @for(country <- Countries.all) {
                     <option value="@country.toLowerCase.replace(' ', '-')">@country</option>
                     }
