--- a/frontend/app/views/tier/upgrade/payment.scala.html
+++ b/frontend/app/views/tier/upgrade/payment.scala.html
@@ -2,6 +2,23 @@
 
 @import views.support.selectDates
 @import views.support.Format._
+@import model.Tier
+
+@annualAmount = {
+    @if(targetTier == Tier.Partner) {
+        £135 one off payment (save £45 a year)
+    } else {
+        £540 one off payment (save £180 a year)
+    }
+}
+
+@monthAmount = {
+    @if(targetTier == Tier.Partner) {
+        £15 per month (£180 per year)
+    } else {
+        £60 per month (£720 per year)
+    }
+}
 
 @main("Upgrade Payment") {
 
@@ -9,7 +26,7 @@
 
     <h1 class="section-headline">Payment</h1>
 
-    <form action="" method="POST" id="payment-form" class="form form-primary-container--full-width js-stripe-form">
+    <form action="" method="POST" id="payment-form" class="form form-primary-container--full-width js-stripe-form" data-change-to-tier="@targetTier">
 
         <div class="js-payment-errors form__error is-hidden"></div>
 
@@ -87,13 +104,13 @@
                     <label class="label upgrade__payment-label" for=annual>
                         <input type="radio" name="paymentType" id="annual" value="annual" checked="checked"/>
                         <span class="payment-label__title">Pay annually</span>
-                        <span class="payment-label__amount">£135 one off payment (save £45 a year)</span>
+                        <span class="payment-label__amount">@annualAmount</span>
                         <span class="payment-label__note">1 year membership, 3 months free</span>
                     </label>
                     <label class="label upgrade__payment-label" for="monthly">
                         <input type="radio" name="paymentType" id="monthly" value="month"/>
                         <span class="payment-label__title">Pay monthly</span>
-                        <span class="payment-label__amount">£15 per month (£180 per year)</span>
+                        <span class="payment-label__amount">@monthAmount</span>
                         <span class="payment-label__note">No comittment, cancel at any time (if you can find the button)</span>
                     </label>
                 </div>
