--- a/frontend/app/views/fragments/joiner/thankyou/paymentSummary.scala.html
+++ b/frontend/app/views/fragments/joiner/thankyou/paymentSummary.scala.html
@@ -3,6 +3,14 @@
 @import views.support.Dates._
 @import views.support.Format._
 
+@paymentType = {
+    @if(subscription.plan.interval == "year") {
+        Yearly payment
+    } else {
+        Monthly Payment
+    }
+}
+
 <section class="joiner-section joiner-section--no-border">
     <table class="table table--responsive-font table--striped">
         <tr class="table__headline" role="row">
@@ -31,7 +39,7 @@
         </tr>
         <tr class="summary-table__row" role="row">
             <td class="summary-table__cell">
-                Monthly Payment
+                @paymentType
             </td>
             <td class="summary-table__cell">
                 @formatPence(subscription.plan.amount)
