--- a/frontend/app/views/tier/upgrade/upgradeForm.scala.html
+++ b/frontend/app/views/tier/upgrade/upgradeForm.scala.html
@@ -26,13 +26,13 @@
 
     <h1 class="section-headline">Payment</h1>
 
-    <form action="" method="POST" id="payment-form" class="form form-primary-container--full-width js-stripe-form" data-change-to-tier="@targetTier">
+    <form action="" method="POST" id="payment-form" class="form form-primary-container js-stripe-form" data-change-to-tier="@targetTier">
 
         <div class="js-payment-errors form__error is-hidden"></div>
 
         @* =============== DELIVERY ADDRESS =============== *@
 
-        @fragments.joiner.payment.addressForm("Delivery address", "Where we'll send your welcome pack", "deliveryAddress")
+        @fragments.joiner.payment.addressForm("Delivery address", "Where we'll send your welcome pack", "deliveryAddress", true)
 
         @* =============== CARD DETAILS =============== *@
 
@@ -82,7 +82,7 @@
                 </div>
 
                 <div class="form-field">
-                    <button class="submit-input action--logged-in js-toggle-billing-address">Different billing address?</button>
+                    <a class="submit-input action--logged-in js-toggle-billing-address">Different billing address?</a>
                 </div>
 
             </div>
@@ -90,7 +90,7 @@
 
         @* =============== DELIVERY ADDRESS =============== *@
 
-        @fragments.joiner.payment.addressForm("Billing address", "The billing address for your card", "billingAddress")
+        @fragments.joiner.payment.addressForm("Billing address", "The billing address for your card", "billingAddress", false)
 
         @* =============== PAYMENT OPTION =============== *@
 
@@ -130,6 +130,8 @@
         </fieldset>
 
     </form>
+
+    @fragments.tier.upgradeAside(targetTier)
 
 </div>
 
