Fix join button for friend

--- a/frontend/app/views/joiner/tier/friend.scala.html
+++ b/frontend/app/views/joiner/tier/friend.scala.html
@@ -61,7 +61,9 @@
             </li>
             <li class="benefits-list benefits-list--left-aligned">
                 <span class="benefits-list__item">Friend Free
-                    <a class="action action--join" href="/join/friend/thankyou">Join</a>
+                    <form class="form--inline" method="POST">
+                        <button class="action action--inline-text action--join">Join</button>
+                    </form>
                 </span>
             </li>
         </ul>
