--- a/frontend/app/views/tier/downgrade/confirm.scala.html
+++ b/frontend/app/views/tier/downgrade/confirm.scala.html
@@ -68,7 +68,7 @@
             <div class="l-row l-row--items-2">
                 <div class="l-row__item"></div>
                 <div class="l-row__item l-row__item--boost-2 secondary-content">
-                    <form action="/tier/downgrade/confirm" method="POST">
+                    <form action="/tier/change/friend" method="POST">
                         <a href="/tier/change" class="action-cta action-cta--cancel">Back</a>
                         <input type="submit" value="Continue" class="action-cta action-cta--confirm"/>
                     </form>
