--- a/frontend/common/app/assets/stylesheets/_vars.scss
+++ b/frontend/common/app/assets/stylesheets/_vars.scss
@@ -224,7 +224,7 @@ $mem-black: #333333;
 $mem-button-confirm: #1a4683;
 $mem-button-cancel: #b8b8b8;
 
-$mem-header: #0A1932;
+$mem-header: rgba(0, 0, 0, .7);
 
 $white: #ffffff;
 $offWhite: #d6d6d6;
